# streaming-fastapi-react

./: .gitignore  README.md  bun.lockb  package.json  pyproject.toml
src/: App.tsx
src/streaming/: __main__.py
